[package]
name = "DefiNft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["simple_defi"]
name = "lib"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.17.7" 
solana-frozen-abi = "1.17.7"
anchor-lang = "0.29.0"

