[package]
name = "DefiNft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["lib"]
name = "lib"
path = "/Users/farshad/DefiNft/DefiNftStaking/lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16.5" 
solana-frozen-abi = "1.16.5"
anchor-lang = "0.29.0"
mpl-candy-machine-core = "3.0.1"
spl = "0.0.1"

